--- a/bundles/stdcompat/stdcompat-current/stdcompat__printexc_s.mli.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__printexc_s.mli.in
@@ -1,6 +1,12 @@
 module type S = sig
 @BEGIN_FROM_4_08_0@
+@BEGIN_FROM_4_02_0@
 type t = exn = ..
+@END_FROM_4_02_0@
+@BEGIN_BEFORE_4_02_0@
+type t = 
+exn
+@END_BEFORE_4_02_0@
 @END_FROM_4_08_0@
 @BEGIN_BEFORE_4_08_0@
 @BEGIN_FROM_4_02_0@
@@ -21,6 +27,21 @@ type raw_backtrace = Printexc.raw_backtrace
 type raw_backtrace
 @END_BEFORE_4_01_0@
 (** @since 4.01.0: type raw_backtrace
+ *)
+
+@BEGIN_FROM_4_12_0@
+type raw_backtrace_entry = Printexc.raw_backtrace_entry
+@END_FROM_4_12_0@
+@BEGIN_BEFORE_4_12_0@
+@BEGIN_FROM_3_11_0@
+type raw_backtrace_entry = private int
+@END_FROM_3_11_0@
+@BEGIN_BEFORE_3_11_0@
+
+type raw_backtrace_entry = int
+@END_BEFORE_3_11_0@
+@END_BEFORE_4_12_0@
+(** @since 4.12.0: type raw_backtrace_entry = Printexc.raw_backtrace_entry
  *)
 
 @BEGIN_FROM_4_02_0@
@@ -57,20 +78,16 @@ type location =
       end_char: int }
  *)
 
-@BEGIN_FROM_4_04_0@
+@BEGIN_FROM_4_11_0@
 module Slot = Printexc.Slot
-@END_FROM_4_04_0@
-@BEGIN_BEFORE_4_04_0@
+@END_FROM_4_11_0@
+@BEGIN_BEFORE_4_11_0@
 module Slot :
-sig
-  type t = backtrace_slot
-  val is_raise : t -> bool
-  val is_inline : t -> bool
-  val location : t -> location option
-  val format : int -> t -> string option
-end
-@END_BEFORE_4_04_0@
-(** @since 4.04.0: module Slot = Printexc.Slot
+sig type t = backtrace_slot val is_raise : t -> bool
+val is_inline : t -> bool val location : t -> location option
+val name : t -> string option val format : int -> t -> string option end
+@END_BEFORE_4_11_0@
+(** @since 4.11.0: module Slot = Printexc.Slot
  *)
 
 @BEGIN_FROM_4_02_0@
@@ -81,6 +98,20 @@ type raw_backtrace_slot
 @END_BEFORE_4_02_0@
 (** @since 4.02.0: type raw_backtrace_slot
  *)
+
+val raw_backtrace_entries : raw_backtrace -> raw_backtrace_entry array
+(** @since 4.12.0:
+    val raw_backtrace_entries : raw_backtrace -> raw_backtrace_entry array *)
+
+val backtrace_slots_of_raw_entry :
+  raw_backtrace_entry -> backtrace_slot array option
+(** @since 4.12.0:
+    val backtrace_slots_of_raw_entry :
+      raw_backtrace_entry -> backtrace_slot array option *)
+
+val default_uncaught_exception_handler : exn -> raw_backtrace -> unit
+(** @since 4.11.0:
+    val default_uncaught_exception_handler : exn -> raw_backtrace -> unit *)
 
 val to_string_default : exn -> string
 (** @since 4.09.0: val to_string_default : exn -> string *)
