--- a/bundles/stdcompat/stdcompat-current/stdcompat__uchar_s.mli.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__uchar_s.mli.in
@@ -1,6 +1,12 @@
 module type S = sig
 @BEGIN_FROM_4_03_0@
+@BEGIN_WITH_UCHAR_PKG@
 type t = Uchar.t
+@END_WITH_UCHAR_PKG@
+@BEGIN_WITHOUT_UCHAR_PKG@
+type t = Uchar.t
+@END_WITHOUT_UCHAR_PKG@
+
 @END_FROM_4_03_0@
 @BEGIN_BEFORE_4_03_0@
 @BEGIN_WITH_UCHAR_PKG@
