--- a/bundles/stdcompat/stdcompat-current/stdcompat_tests.ml.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat_tests.ml.in
@@ -1,3 +1,224 @@
+let test_array_for_all2 () =
+  let visited = ref [] in
+  let p i s =
+    visited := i :: !visited;
+    String.make 1 (char_of_int ((int_of_char 'a') + i)) = s in
+  assert (
+    Stdcompat.Array.for_all2 p [| 0; 1; 2; 3 |] [| "a"; "b"; "c"; "d" |]);
+  assert (List.rev !visited = [0; 1; 2; 3]);
+  visited := [];
+  let p i s =
+    visited := i :: !visited;
+    String.make 1 (char_of_int ((int_of_char 'a') + i)) = s && i <> 2 in
+  assert (not (
+    Stdcompat.Array.for_all2 p [| 0; 1; 2; 3 |] [| "a"; "b"; "c"; "d" |]));
+  assert (List.rev !visited = [0; 1; 2]);
+  visited := [];
+  assert (
+    try
+      ignore (
+        Stdcompat.Array.for_all2 p [| 0; 1; 2; 3 |] [| "a"; "b"; "c" |]);
+      false
+    with Invalid_argument _ -> true);
+  assert (List.rev !visited = [])
+
+let test_array_exists2 () =
+  let visited = ref [] in
+  let p i s =
+    visited := i :: !visited;
+    String.make 1 (char_of_int ((int_of_char 'a') + i)) <> s in
+  assert (not (
+    Stdcompat.Array.exists2 p [| 0; 1; 2; 3 |] [| "a"; "b"; "c"; "d" |]));
+  assert (List.rev !visited = [0; 1; 2; 3]);
+  visited := [];
+  let p i s =
+    visited := i :: !visited;
+    String.make 1 (char_of_int ((int_of_char 'a') + i)) <> s || i = 2 in
+  assert (
+    Stdcompat.Array.exists2 p [| 0; 1; 2; 3 |] [| "a"; "b"; "c"; "d" |]);
+  assert (List.rev !visited = [0; 1; 2]);
+  visited := [];
+  assert (
+    try
+      ignore (
+        Stdcompat.Array.exists2 p [| 0; 1; 2; 3 |] [| "a"; "b"; "c" |]);
+      false
+    with Invalid_argument _ -> true);
+  assert (List.rev !visited = [])
+
+let test_list_filteri () =
+  let visited = ref [] in
+  let p i s =
+    visited := i :: !visited;
+    assert (string_of_int i = s);
+    i mod 2 = 0 in
+  assert (
+    Stdcompat.List.filteri p (Stdcompat.List.init 6 string_of_int) =
+      ["0"; "2"; "4"]);
+  assert (List.rev !visited = [0; 1; 2; 3; 4; 5])
+
+let test_list_fold_left_map () =
+  let visited = ref [] in
+  let f accu s =
+    visited := s :: !visited;
+    accu ^ s, "a" ^ s in
+  assert (
+    Stdcompat.List.fold_left_map f "" (Stdcompat.List.init 6 string_of_int) =
+      ("012345", ["a0"; "a1"; "a2"; "a3"; "a4"; "a5"]));
+  assert (List.rev !visited = ["0"; "1"; "2"; "3"; "4"; "5"])
+
+let test_seq_cons () =
+  assert (
+    Stdcompat.List.of_seq (Stdcompat.Seq.cons 0 (Stdcompat.Seq.cons 1
+      (Stdcompat.List.to_seq [2; 3]))) = [0; 1; 2; 3])
+
+let test_seq_append () =
+  assert (
+    Stdcompat.List.of_seq (Stdcompat.Seq.append
+      (Stdcompat.List.to_seq [0; 1; 2])
+      (Stdcompat.List.to_seq [3; 4; 5])) = [0; 1; 2; 3; 4; 5])
+
+let test_seq_unfold () =
+  assert (
+    Stdcompat.List.of_seq (Stdcompat.Seq.unfold (fun i ->
+      if i < 5 then
+        Some (string_of_int i, i + 1)
+      else
+        None) 0) = ["0"; "1"; "2"; "3"; "4"])
+
+let test_set_filter_map () =
+  let module Set = Stdcompat.Set.Make (Stdcompat.Int) in
+  let visited = ref [] in
+  assert (
+    List.sort compare (Set.elements (Set.filter_map (fun i ->
+      visited := i :: !visited;
+      if i mod 2 = 0 then
+        Some (6 - i / 2)
+      else
+        None)
+      (Set.of_seq (Stdcompat.List.to_seq
+        (Stdcompat.List.init 6 Stdcompat.Fun.id))))) = [4; 5; 6]);
+  assert (List.rev !visited = [0; 1; 2; 3; 4; 5])
+
+let test_map_filter_map () =
+  let module Map = Stdcompat.Map.Make (Stdcompat.Int) in
+  let visited = ref [] in
+  assert (
+    List.sort compare (Map.bindings (Map.filter_map (fun k s ->
+      visited := k :: !visited;
+      assert (string_of_int k = s);
+      if k mod 2 = 0 then
+        Some ("a" ^ s)
+      else
+        None)
+      (Map.of_seq (Stdcompat.List.to_seq
+        (Stdcompat.List.init 6 (fun i -> i, string_of_int i)))))) =
+          [0, "a0"; 2, "a2"; 4, "a4"]);
+  assert (List.rev !visited = [0; 1; 2; 3; 4; 5])
+
+let test_mkdir_rmdir () =
+  Stdcompat.Sys.mkdir "new_directory" 600;
+  assert (Stdcompat.Sys.is_directory "new_directory");
+  begin try
+    Stdcompat.Sys.mkdir "new_directory" 600;
+    assert false;
+  with Sys_error _ ->
+    assert true;
+  end;
+  Stdcompat.Sys.rmdir "new_directory";
+  begin try
+    Stdcompat.Sys.rmdir "new_directory";
+    assert false;
+  with Sys_error _ ->
+    assert true;
+  end
+
+let test_set_to_seq_to_rev_seq () =
+  let module M = Stdcompat.Set.Make (Stdcompat.Int) in
+  let s = M.add 2 (M.add 1 (M.add 3 M.empty)) in
+  assert (Stdcompat.List.of_seq (M.to_seq s) = [1; 2; 3]);
+  assert (Stdcompat.List.of_seq (M.to_rev_seq s) = [3; 2; 1])
+
+let test_map_to_seq_to_rev_seq () =
+  let module M = Stdcompat.Map.Make (Stdcompat.Int) in
+  let s = M.add 2 () (M.add 1 () (M.add 3 () M.empty)) in
+  assert (Stdcompat.List.of_seq (M.to_seq s) = [1, (); 2, (); 3, ()]);
+  assert (Stdcompat.List.of_seq (M.to_rev_seq s) = [3, (); 2, (); 1, ()])
+
+let test_list_partition_map () =
+  assert (Stdcompat.List.partition_map (fun i ->
+    if i > 0 then
+      Stdcompat.Either.Left i
+    else
+      Stdcompat.Either.Right (-i)) [1; -2; 3; -4; 5; -6]
+    = ([1; 3; 5], [2; 4; 6]))
+
+let test_list_compare () =
+  let l1 = [1; 2; 3; 4] in
+  let l2 = [1; 2; 4; 3] in
+  let l3 = [1; 2; 5; 6] in
+  assert (Stdcompat.List.compare Stdcompat.Int.compare l1 l1 = 0);
+  assert (Stdcompat.List.compare Stdcompat.Int.compare l1 l2 < 0);
+  assert (Stdcompat.List.compare Stdcompat.Int.compare l1 l3 < 0);
+  assert (Stdcompat.List.compare Stdcompat.Int.compare l2 l1 > 0);
+  assert (Stdcompat.List.compare Stdcompat.Int.compare l2 l2 = 0);
+  assert (Stdcompat.List.compare Stdcompat.Int.compare l2 l3 < 0);
+  assert (Stdcompat.List.compare Stdcompat.Int.compare l3 l1 > 0);
+  assert (Stdcompat.List.compare Stdcompat.Int.compare l3 l2 > 0);
+  assert (Stdcompat.List.compare Stdcompat.Int.compare l3 l3 = 0)
+
+let test_list_equal () =
+  let l1 = [1; 2; 3; 4] in
+  let l2 = [1; 2; 4; 3] in
+  let l3 = [1; 2; 5; 6] in
+  assert (Stdcompat.List.equal Stdcompat.Int.equal l1 l1);
+  assert (not (Stdcompat.List.equal Stdcompat.Int.equal l1 l2));
+  assert (not (Stdcompat.List.equal Stdcompat.Int.equal l1 l3));
+  assert (not (Stdcompat.List.equal Stdcompat.Int.equal l2 l1));
+  assert (Stdcompat.List.equal Stdcompat.Int.equal l2 l2);
+  assert (not (Stdcompat.List.equal Stdcompat.Int.equal l2 l3));
+  assert (not (Stdcompat.List.equal Stdcompat.Int.equal l3 l1));
+  assert (not (Stdcompat.List.equal Stdcompat.Int.equal l3 l2));
+  assert (Stdcompat.List.equal Stdcompat.Int.equal l3 l3)
+
+let test_hashtbl_rebuild () =
+  let h = Hashtbl.create 17 in
+  Hashtbl.add h 1 ();
+  Hashtbl.add h 2 ();
+  Hashtbl.add h 3 ();
+  let h' = Stdcompat.Hashtbl.rebuild h in
+  let module M = Stdcompat.Set.Make (Stdcompat.Int) in
+  assert (
+    M.equal
+      (M.of_seq (Stdcompat.Seq.map fst (Stdcompat.Hashtbl.to_seq h')))
+      (M.add 1 (M.add 2
+         (M.add 3 M.empty))))
+
+let test_format_pp_print_seq () =
+  let buffer = Buffer.create 17 in
+  Format.fprintf (Format.formatter_of_buffer buffer) "%a@."
+    (Stdcompat.Format.pp_print_seq
+      ~pp_sep:(fun fmt () -> Format.pp_print_string fmt ",")
+      Format.pp_print_int) (Stdcompat.List.to_seq [1; 2; 3]);
+  assert (Buffer.contents buffer = "1,2,3\n")
+
+let test_either () =
+  assert (Stdcompat.Either.compare
+    ~left:Stdcompat.Int.compare ~right:Stdcompat.Int.compare
+    (Stdcompat.Either.Left 1) (Stdcompat.Either.Left 1) = 0);
+  assert (Stdcompat.Either.compare
+    ~left:Stdcompat.Int.compare ~right:Stdcompat.Int.compare
+    (Stdcompat.Either.Left 1) (Stdcompat.Either.Left 2) < 0);
+  assert (Stdcompat.Either.compare
+    ~left:Stdcompat.Int.compare ~right:Stdcompat.Int.compare
+    (Stdcompat.Either.Left 1) (Stdcompat.Either.Right 2) < 0);
+  assert (Stdcompat.Either.compare
+    ~left:Stdcompat.Int.compare ~right:Stdcompat.Int.compare
+    (Stdcompat.Either.Right 1) (Stdcompat.Either.Left 2) > 0);
+  assert (Stdcompat.Either.compare
+    ~left:Stdcompat.Int.compare ~right:Stdcompat.Int.compare
+    (Stdcompat.Either.Right 1) (Stdcompat.Either.Right 2) < 0)
+
 let () =
   assert (Stdcompat.hypot 3. 4. = 5.);
   assert (Stdcompat.copysign 1. 2. = 1.);
@@ -464,4 +685,22 @@ let () =
     ~finally:(fun () -> Sys.remove file) in
   check_quote_string "a\\\\";
   check_quote_string "a\\\\b\"\\\"\\\\\"\"\\";
+  test_array_for_all2 ();
+  test_array_exists2 ();
+  test_list_filteri ();
+  test_list_fold_left_map ();
+  test_seq_cons ();
+  test_seq_append ();
+  test_seq_unfold ();
+  test_set_filter_map ();
+  test_map_filter_map ();
+  test_mkdir_rmdir ();
+  test_set_to_seq_to_rev_seq ();
+  test_map_to_seq_to_rev_seq ();
+  test_list_partition_map ();
+  test_list_compare ();
+  test_list_equal ();
+  test_hashtbl_rebuild ();
+  test_format_pp_print_seq ();
+  test_either ();
   ()
