--- a/bundles/stdcompat/stdcompat-current/Jenkinsfile
+++ b/bundles/stdcompat/stdcompat-current/Jenkinsfile
@@ -12,33 +12,51 @@ properties([
 ])
 
 pipeline {
-    agent {
-/*
-        dockerfile {
-            label 'slave'
-        }
-*/
-        label 'slave'
-    }
+    agent none
 
     stages {
         stage('Prepare') {
+            agent {
+                label 'linux'
+            }
             steps {
                 sh 'docker build -t stdcompat .'
             }
         }
-        stage('Build') {
+        stage('Bootstrap') {
+            agent {
+                label 'linux'
+            }
             steps {
-                sh 'docker run --rm --volume $PWD:/workspace stdcompat sh -c \'cd /workspace && eval `opam config env` && autoreconf && mkdir build && cd build && ../configure && make\''
+                sh 'docker run --rm --volume $PWD:/workspace stdcompat bash -c \'cd /workspace && make -f Makefile.bootstrap\''
+                stash name: 'bootstrap'
             }
         }
-        stage('Test') {
+        stage('Configure') {
+            agent {
+                label 'linux'
+            }
+            steps {
+                unstash 'bootstrap'
+                sh 'docker run --rm --volume $PWD:/workspace stdcompat bash -c \'cd /workspace && mkdir build && cd build && ../configure\''
+                stash name: 'configure'
+            }
+        }
+        stage('Build') {
+            agent {
+                label 'linux'
+            }
+            steps {
+                unstash 'configure'
+                sh 'docker run --rm --volume $PWD:/workspace stdcompat bash -c \'cd /workspace/build && make\''
+            }
+        }
+        stage('Tests') {
+            agent {
+                label 'linux'
+            }
             steps {
                 script {
-                    def pwd = sh (
-                        script: 'echo $PWD',
-                        returnStdout: true
-                    ).trim()
                     def switches = sh (
                         script: 'docker run --rm stdcompat opam switch -s',
                         returnStdout: true
@@ -46,9 +64,29 @@ pipeline {
                     def branches = [:]
                     for (i in switches) {
                         def switch_name = i
-                        branches[switch_name] = {
-                            node {
-                                sh "docker run --rm --volume $pwd:/workspace stdcompat sh -c 'cd /workspace && opam config exec --switch $switch_name -- sh -c '\\''mkdir build/$switch_name && cd build/$switch_name && ../../configure && make && make tests && ../../configure --disable-magic && make && make tests'\\'"
+                        branches["OCaml " + switch_name + " on Linux"] = {
+                            node('linux') {
+                                sh "rm -rf build"
+                                unstash 'bootstrap'
+                                sh "docker run --rm --volume \$PWD:/workspace stdcompat sh -c 'cd /workspace && unset BASH_ENV && opam config exec --switch $switch_name -- sh -c '\\''mkdir build && cd build && ../configure && make && make test && ../configure --disable-magic && make && make test'\\'"
+                            }
+                        }
+                    }
+                    def versions = [/*"4.03.0", "4.04.2", "4.05.0", "4.06.1", "4.07.1", "4.08.1", "4.09.0", "4.10.0"*/]
+                    for (i in versions) {
+                        def version = i
+                        branches["OCaml " + version + " on Windows"] = {
+                            node('windows') {
+                                checkout scm
+                                bat """
+call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community\\VC\\Auxiliary\\Build\\vcvars64.bat"
+set PATH=C:\\tools\\cygwin\\bin;%PATH%
+bash -c "ci/cygwin-compile-ocaml.sh \\"$version\\""
+if not errorlevel 0 exit /b
+set PATH=C:\\ocaml\\$version\\bin;%PATH%
+set FLEXDIR=C:\\ocaml\\$version\\lib
+bash -c "eval \$(~/ocaml-4.09.0/tools/msvs-promote-path) && make -f Makefile.bootstrap && ./configure && make && make test"
+                                """
                             }
                         }
                     }
@@ -59,8 +97,12 @@ pipeline {
             }
         }
         stage('Deploy') {
+            agent {
+                label 'linux'
+            }
             steps {
-                sh 'cd build && make dist'
+                unstash 'configure'
+                sh 'docker run --rm --volume $PWD:/workspace stdcompat bash -c \'cd /workspace/build && make dist\''
                 archiveArtifacts artifacts: 'build/*.tar.gz', fingerprint: true
             }
         }
