--- a/bundles/stdcompat/stdcompat-current/stdcompat__arg.ml.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__arg.ml.in
@@ -1,7 +1,7 @@
-@BEGIN_FROM_4_05_0@
+@BEGIN_FROM_4_12_0@
 include Arg
-@END_FROM_4_05_0@
-@BEGIN_BEFORE_4_05_0@
+@END_FROM_4_12_0@
+@BEGIN_BEFORE_4_12_0@
 exception Help of string
 
 exception Bad of string
@@ -23,6 +23,7 @@ type spec =
   | Tuple of spec list
   | Symbol of string list * (string -> unit)
   | Rest of (string -> unit)
+  | Rest_all of (string list -> unit)
   | Expand of (string -> string array)
 
 type key = string
@@ -48,7 +49,13 @@ let rec no_expand spec =
   | Tuple l -> Arg.Tuple (List.map no_expand l)
   | Symbol (l, f) -> Arg.Symbol (l, f)
   | Rest f -> Arg.Rest f
+  | Rest_all _ -> not_implemented ()
+  @BEGIN_FROM_4_05_0@
+  | Expand f -> Expand f
+  @END_FROM_4_05_0@
+  @BEGIN_BEFORE_4_05_0@
   | Expand _ -> not_implemented ()
+  @END_BEFORE_4_05_0@
 
 let rec expand spec =
   match spec with
@@ -65,6 +72,9 @@ let rec expand spec =
   | Arg.Tuple l -> Tuple (List.map expand l)
   | Arg.Symbol (l, f) -> Symbol (l, f)
   | Arg.Rest f -> Rest f
+  @BEGIN_FROM_4_05_0@
+  | Arg.Expand f -> Expand f
+  @END_FROM_4_05_0@
 
 let no_expand_list l =
   List.map (fun (k, s, d) -> k, no_expand s, d) l
@@ -166,4 +176,4 @@ let parse_expand _ =
 
 let parse_and_expand_argv_dynamic _ =
   not_implemented ()
-@END_BEFORE_4_05_0@
+@END_BEFORE_4_12_0@
