--- a/bundles/stdcompat/stdcompat-current/stdcompat__array.ml.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__array.ml.in
@@ -15,6 +15,32 @@ let create_float = Array.make_float
 @END_BEFORE_4_03_0@
 @END_FROM_4_02_0@
 
+@BEGIN_BEFORE_4_11_0@
+exception Iter
+
+let for_all2 f array1 array2 =
+  if length array1 <> length array2 then
+    invalid_arg "Array.for_all2";
+  try
+    for i = 0 to length array1 - 1 do
+      if not (f (unsafe_get array1 i) (unsafe_get array2 i)) then
+        raise Iter
+    done;
+    true
+  with Iter -> false
+
+let exists2 f array1 array2 =
+  if length array1 <> length array2 then
+    invalid_arg "Array.exists2";
+  try
+    for i = 0 to length array1 - 1 do
+      if f (unsafe_get array1 i) (unsafe_get array2 i) then
+        raise Iter
+    done;
+    false
+  with Iter -> true
+@END_BEFORE_4_11_0@
+
 @BEGIN_BEFORE_4_03_0@
 let iter2 f array1 array2 =
   if length array1 <> length array2 then
@@ -25,11 +51,9 @@ let iter2 f array1 array2 =
 
 let map2 f array1 array2 =
   if length array1 <> length array2 then
-    invalid_arg "array_map2";
+    invalid_arg "Array.map2";
   init (length array1)
     (fun i -> f (unsafe_get array1 i) (unsafe_get array2 i))
-
-exception Iter
 
 let for_all f array =
   try
