--- a/bundles/stdcompat/stdcompat-current/stdcompat__float_s.mli.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__float_s.mli.in
@@ -39,87 +39,66 @@ module Array = Float.Array
 @BEGIN_BEFORE_4_08_0@
 @BEGIN_FROM_4_06_0@
 module Array :
-sig
-  type t = Stdcompat__init.floatarray
-  val length : t -> int
-  val get : t -> int -> float
-  val set : t -> int -> float -> unit
-  val make : int -> float -> t
-  val create : int -> t
-  val init : int -> (int -> float) -> t
-  val append : t -> t -> t
-  val concat : t list -> t
-  val sub : t -> int -> int -> t
-  val copy : t -> t
-  val fill : t -> int -> int -> float -> unit
-  val blit : t -> int -> t -> int -> int -> unit
-  val to_list : t -> float list
-  val of_list : float list -> t
-  val iter : (float -> unit) -> t -> unit
-  val iteri : (int -> float -> unit) -> t -> unit
-  val map : (float -> float) -> t -> t
-  val mapi : (int -> float -> float) -> t -> t
-  val fold_left : ('a -> float -> 'a) -> 'a -> t -> 'a
-  val fold_right : (float -> 'a -> 'a) -> t -> 'a -> 'a
-  val iter2 : (float -> float -> unit) -> t -> t -> unit
-  val map2 : (float -> float -> float) -> t -> t -> t
-  val for_all : (float -> bool) -> t -> bool
-  val exists : (float -> bool) -> t -> bool
-  val mem : float -> t -> bool
-  val mem_ieee : float -> t -> bool
-  val sort : (float -> float -> int) -> t -> unit
-  val stable_sort : (float -> float -> int) -> t -> unit
-  val fast_sort : (float -> float -> int) -> t -> unit
-  val to_seq : t -> float Stdcompat__seq.t
-  val to_seqi : t -> (int * float) Stdcompat__seq.t
-  val of_seq : float Stdcompat__seq.t -> t
-  val map_to_array : (float -> 'a) -> t -> 'a array
-  val map_from_array : ('a -> float) -> 'a array -> t
-  external unsafe_get : floatarray -> int -> float = "%floatarray_unsafe_get"
-  external unsafe_set :
-    floatarray -> int -> float -> unit = "%floatarray_unsafe_set"
+sig type t = Stdcompat__init.floatarray val length : t -> int
+val get : t -> int -> float val set : t -> int -> float -> unit
+val make : int -> float -> t val create : int -> t
+val init : int -> (int -> float) -> t val append : t -> t -> t
+val concat : t list -> t val sub : t -> int -> int -> t val copy : t -> t
+val fill : t -> int -> int -> float -> unit
+val blit : t -> int -> t -> int -> int -> unit val to_list : t -> float list
+val of_list : float list -> t val iter : (float -> unit) -> t -> unit
+val iteri : (int -> float -> unit) -> t -> unit
+val map : (float -> float) -> t -> t
+val mapi : (int -> float -> float) -> t -> t
+val fold_left : ('a -> float -> 'a) -> 'a -> t -> 'a
+val fold_right : (float -> 'a -> 'a) -> t -> 'a -> 'a
+val iter2 : (float -> float -> unit) -> t -> t -> unit
+val map2 : (float -> float -> float) -> t -> t -> t
+val for_all : (float -> bool) -> t -> bool
+val exists : (float -> bool) -> t -> bool val mem : float -> t -> bool
+val mem_ieee : float -> t -> bool
+val sort : (float -> float -> int) -> t -> unit
+val stable_sort : (float -> float -> int) -> t -> unit
+val fast_sort : (float -> float -> int) -> t -> unit
+val to_seq : t -> float Stdcompat__seq.t
+val to_seqi : t -> (int * float) Stdcompat__seq.t
+val of_seq : float Stdcompat__seq.t -> t
+val map_to_array : (float -> 'a) -> t -> 'a array
+val map_from_array : ('a -> float) -> 'a array -> t
+external unsafe_get : floatarray -> int -> float = "%floatarray_unsafe_get"
+external unsafe_set :
+  floatarray -> int -> float -> unit = "%floatarray_unsafe_set"
 end
 @END_FROM_4_06_0@
 @BEGIN_BEFORE_4_06_0@
 module Array :
-sig
-  type t = Stdcompat__init.floatarray
-  val length : t -> int
-  val get : t -> int -> float
-  val set : t -> int -> float -> unit
-  val make : int -> float -> t
-  val create : int -> t
-  val init : int -> (int -> float) -> t
-  val append : t -> t -> t
-  val concat : t list -> t
-  val sub : t -> int -> int -> t
-  val copy : t -> t
-  val fill : t -> int -> int -> float -> unit
-  val blit : t -> int -> t -> int -> int -> unit
-  val to_list : t -> float list
-  val of_list : float list -> t
-  val iter : (float -> unit) -> t -> unit
-  val iteri : (int -> float -> unit) -> t -> unit
-  val map : (float -> float) -> t -> t
-  val mapi : (int -> float -> float) -> t -> t
-  val fold_left : ('a -> float -> 'a) -> 'a -> t -> 'a
-  val fold_right : (float -> 'a -> 'a) -> t -> 'a -> 'a
-  val iter2 : (float -> float -> unit) -> t -> t -> unit
-  val map2 : (float -> float -> float) -> t -> t -> t
-  val for_all : (float -> bool) -> t -> bool
-  val exists : (float -> bool) -> t -> bool
-  val mem : float -> t -> bool
-  val mem_ieee : float -> t -> bool
-  val sort : (float -> float -> int) -> t -> unit
-  val stable_sort : (float -> float -> int) -> t -> unit
-  val fast_sort : (float -> float -> int) -> t -> unit
-  val to_seq : t -> float Stdcompat__seq.t
-  val to_seqi : t -> (int * float) Stdcompat__seq.t
-  val of_seq : float Stdcompat__seq.t -> t
-  val map_to_array : (float -> 'a) -> t -> 'a array
-  val map_from_array : ('a -> float) -> 'a array -> t
-  val unsafe_get : t -> int -> float
-  val unsafe_set : t -> int -> float -> unit
+sig type t = Stdcompat__init.floatarray val length : t -> int
+val get : t -> int -> float val set : t -> int -> float -> unit
+val make : int -> float -> t val create : int -> t
+val init : int -> (int -> float) -> t val append : t -> t -> t
+val concat : t list -> t val sub : t -> int -> int -> t val copy : t -> t
+val fill : t -> int -> int -> float -> unit
+val blit : t -> int -> t -> int -> int -> unit val to_list : t -> float list
+val of_list : float list -> t val iter : (float -> unit) -> t -> unit
+val iteri : (int -> float -> unit) -> t -> unit
+val map : (float -> float) -> t -> t
+val mapi : (int -> float -> float) -> t -> t
+val fold_left : ('a -> float -> 'a) -> 'a -> t -> 'a
+val fold_right : (float -> 'a -> 'a) -> t -> 'a -> 'a
+val iter2 : (float -> float -> unit) -> t -> t -> unit
+val map2 : (float -> float -> float) -> t -> t -> t
+val for_all : (float -> bool) -> t -> bool
+val exists : (float -> bool) -> t -> bool val mem : float -> t -> bool
+val mem_ieee : float -> t -> bool
+val sort : (float -> float -> int) -> t -> unit
+val stable_sort : (float -> float -> int) -> t -> unit
+val fast_sort : (float -> float -> int) -> t -> unit
+val to_seq : t -> float Stdcompat__seq.t
+val to_seqi : t -> (int * float) Stdcompat__seq.t
+val of_seq : float Stdcompat__seq.t -> t
+val map_to_array : (float -> 'a) -> t -> 'a array
+val map_from_array : ('a -> float) -> 'a array -> t
+val unsafe_get : t -> int -> float val unsafe_set : t -> int -> float -> unit
 end
 @END_BEFORE_4_06_0@
 
@@ -133,87 +112,68 @@ module ArrayLabels = Float.ArrayLabels
 @BEGIN_BEFORE_4_08_0@
 @BEGIN_FROM_4_06_0@
 module ArrayLabels :
-sig
-  type t = Stdcompat__init.floatarray
-  val length : t -> int
-  val get : t -> int -> float
-  val set : t -> int -> float -> unit
-  val make : int -> float -> t
-  val create : int -> t
-  val init : int -> f:(int -> float) -> t
-  val append : t -> t -> t
-  val concat : t list -> t
-  val sub : t -> pos:int -> len:int -> t
-  val copy : t -> t
-  val fill : t -> pos:int -> len:int -> float -> unit
-  val blit : src:t -> src_pos:int -> dst:t -> dst_pos:int -> len:int -> unit
-  val to_list : t -> float list
-  val of_list : float list -> t
-  val iter : f:(float -> unit) -> t -> unit
-  val iteri : f:(int -> float -> unit) -> t -> unit
-  val map : f:(float -> float) -> t -> t
-  val mapi : f:(int -> float -> float) -> t -> t
-  val fold_left : f:('a -> float -> 'a) -> init:'a -> t -> 'a
-  val fold_right : f:(float -> 'a -> 'a) -> t -> init:'a -> 'a
-  val iter2 : f:(float -> float -> unit) -> t -> t -> unit
-  val map2 : f:(float -> float -> float) -> t -> t -> t
-  val for_all : f:(float -> bool) -> t -> bool
-  val exists : f:(float -> bool) -> t -> bool
-  val mem : float -> set:t -> bool
-  val mem_ieee : float -> set:t -> bool
-  val sort : cmp:(float -> float -> int) -> t -> unit
-  val stable_sort : cmp:(float -> float -> int) -> t -> unit
-  val fast_sort : cmp:(float -> float -> int) -> t -> unit
-  val to_seq : t -> float Stdcompat__seq.t
-  val to_seqi : t -> (int * float) Stdcompat__seq.t
-  val of_seq : float Stdcompat__seq.t -> t
-  val map_to_array : f:(float -> 'a) -> t -> 'a array
-  val map_from_array : f:('a -> float) -> 'a array -> t
-  external unsafe_get : floatarray -> int -> float = "%floatarray_unsafe_get"
-  external unsafe_set :
-    floatarray -> int -> float -> unit = "%floatarray_unsafe_set"
+sig type t = Stdcompat__init.floatarray val length : t -> int
+val get : t -> int -> float val set : t -> int -> float -> unit
+val make : int -> float -> t val create : int -> t
+val init : int -> f:(int -> float) -> t val append : t -> t -> t
+val concat : t list -> t val sub : t -> pos:int -> len:int -> t
+val copy : t -> t val fill : t -> pos:int -> len:int -> float -> unit
+val blit : src:t -> src_pos:int -> dst:t -> dst_pos:int -> len:int -> unit
+val to_list : t -> float list val of_list : float list -> t
+val iter : f:(float -> unit) -> t -> unit
+val iteri : f:(int -> float -> unit) -> t -> unit
+val map : f:(float -> float) -> t -> t
+val mapi : f:(int -> float -> float) -> t -> t
+val fold_left : f:('a -> float -> 'a) -> init:'a -> t -> 'a
+val fold_right : f:(float -> 'a -> 'a) -> t -> init:'a -> 'a
+val iter2 : f:(float -> float -> unit) -> t -> t -> unit
+val map2 : f:(float -> float -> float) -> t -> t -> t
+val for_all : f:(float -> bool) -> t -> bool
+val exists : f:(float -> bool) -> t -> bool val mem : float -> set:t -> bool
+val mem_ieee : float -> set:t -> bool
+val sort : cmp:(float -> float -> int) -> t -> unit
+val stable_sort : cmp:(float -> float -> int) -> t -> unit
+val fast_sort : cmp:(float -> float -> int) -> t -> unit
+val to_seq : t -> float Stdcompat__seq.t
+val to_seqi : t -> (int * float) Stdcompat__seq.t
+val of_seq : float Stdcompat__seq.t -> t
+val map_to_array : f:(float -> 'a) -> t -> 'a array
+val map_from_array : f:('a -> float) -> 'a array -> t
+external unsafe_get : floatarray -> int -> float = "%floatarray_unsafe_get"
+external unsafe_set :
+  floatarray -> int -> float -> unit = "%floatarray_unsafe_set"
 end
 @END_FROM_4_06_0@
 @BEGIN_BEFORE_4_06_0@
 module ArrayLabels :
-sig
-  type t = Stdcompat__init.floatarray
-  val length : t -> int
-  val get : t -> int -> float
-  val set : t -> int -> float -> unit
-  val make : int -> float -> t
-  val create : int -> t
-  val init : int -> f:(int -> float) -> t
-  val append : t -> t -> t
-  val concat : t list -> t
-  val sub : t -> pos:int -> len:int -> t
-  val copy : t -> t
-  val fill : t -> pos:int -> len:int -> float -> unit
-  val blit : src:t -> src_pos:int -> dst:t -> dst_pos:int -> len:int -> unit
-  val to_list : t -> float list
-  val of_list : float list -> t
-  val iter : f:(float -> unit) -> t -> unit
-  val iteri : f:(int -> float -> unit) -> t -> unit
-  val map : f:(float -> float) -> t -> t
-  val mapi : f:(int -> float -> float) -> t -> t
-  val fold_left : f:('a -> float -> 'a) -> init:'a -> t -> 'a
-  val fold_right : f:(float -> 'a -> 'a) -> t -> init:'a -> 'a
-  val iter2 : f:(float -> float -> unit) -> t -> t -> unit
-  val map2 : f:(float -> float -> float) -> t -> t -> t
-  val for_all : f:(float -> bool) -> t -> bool
-  val exists : f:(float -> bool) -> t -> bool
-  val mem : float -> set:t -> bool
-  val mem_ieee : float -> set:t -> bool
-  val sort : cmp:(float -> float -> int) -> t -> unit
-  val stable_sort : cmp:(float -> float -> int) -> t -> unit
-  val fast_sort : cmp:(float -> float -> int) -> t -> unit
-  val to_seq : t -> float Stdcompat__seq.t
-  val to_seqi : t -> (int * float) Stdcompat__seq.t
-  val of_seq : float Stdcompat__seq.t -> t
-  val map_to_array : f:(float -> 'a) -> t -> 'a array
-  val map_from_array : f:('a -> float) -> 'a array -> t
-  val unsafe_get : t -> int -> float
-  val unsafe_set : t -> int -> float -> unit
+sig type t = Stdcompat__init.floatarray val length : t -> int
+val get : t -> int -> float val set : t -> int -> float -> unit
+val make : int -> float -> t val create : int -> t
+val init : int -> f:(int -> float) -> t val append : t -> t -> t
+val concat : t list -> t val sub : t -> pos:int -> len:int -> t
+val copy : t -> t val fill : t -> pos:int -> len:int -> float -> unit
+val blit : src:t -> src_pos:int -> dst:t -> dst_pos:int -> len:int -> unit
+val to_list : t -> float list val of_list : float list -> t
+val iter : f:(float -> unit) -> t -> unit
+val iteri : f:(int -> float -> unit) -> t -> unit
+val map : f:(float -> float) -> t -> t
+val mapi : f:(int -> float -> float) -> t -> t
+val fold_left : f:('a -> float -> 'a) -> init:'a -> t -> 'a
+val fold_right : f:(float -> 'a -> 'a) -> t -> init:'a -> 'a
+val iter2 : f:(float -> float -> unit) -> t -> t -> unit
+val map2 : f:(float -> float -> float) -> t -> t -> t
+val for_all : f:(float -> bool) -> t -> bool
+val exists : f:(float -> bool) -> t -> bool val mem : float -> set:t -> bool
+val mem_ieee : float -> set:t -> bool
+val sort : cmp:(float -> float -> int) -> t -> unit
+val stable_sort : cmp:(float -> float -> int) -> t -> unit
+val fast_sort : cmp:(float -> float -> int) -> t -> unit
+val to_seq : t -> float Stdcompat__seq.t
+val to_seqi : t -> (int * float) Stdcompat__seq.t
+val of_seq : float Stdcompat__seq.t -> t
+val map_to_array : f:(float -> 'a) -> t -> 'a array
+val map_from_array : f:('a -> float) -> 'a array -> t
+val unsafe_get : t -> int -> float val unsafe_set : t -> int -> float -> unit
 end
 @END_BEFORE_4_06_0@
 
