--- a/bundles/stdcompat/stdcompat-current/stdcompat__printexc.ml.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__printexc.ml.in
@@ -1,6 +1,26 @@
 @BEGIN_FROM_4_08_0@
 include Printexc
 @END_FROM_4_08_0@
+
+
+@BEGIN_BEFORE_4_12_0@
+@BEGIN_FROM_3_11_0@
+type raw_backtrace_entry = private int
+@END_FROM_3_11_0@
+@BEGIN_BEFORE_3_11_0@
+type raw_backtrace_entry = int
+@END_BEFORE_3_11_0@
+
+let not_implemented () =
+  failwith "Stdcompat: not implemented."
+
+let backtrace_slots_of_raw_entry _ =
+  not_implemented ()
+
+let raw_backtrace_entries _ =
+  not_implemented ()
+@END_BEFORE_4_12_0@
+
 @BEGIN_BEFORE_4_08_0@
 @BEGIN_FROM_4_02_0@
 type t = exn = ..
@@ -14,7 +34,7 @@ type t = exn
 type raw_backtrace = Printexc.raw_backtrace
 @END_FROM_4_01_0@
 @BEGIN_BEFORE_4_01_0@
-type raw_backtrace = ()
+type raw_backtrace = unit
 @END_BEFORE_4_01_0@
 
 @BEGIN_FROM_4_02_0@
@@ -51,11 +71,15 @@ let to_string_default e =
   to_string e
 @END_BEFORE_4_09_0@
 
-@BEGIN_FROM_4_04_0@
+@BEGIN_FROM_4_11_0@
 module Slot = Printexc.Slot
+@END_FROM_4_11_0@
+@BEGIN_BEFORE_4_11_0@
+module Slot = struct
+@BEGIN_FROM_4_04_0@
+  include Printexc.Slot
 @END_FROM_4_04_0@
 @BEGIN_BEFORE_4_04_0@
-module Slot = struct
   type t = backtrace_slot
 @BEGIN_FROM_4_02_0@
   let is_raise = Printexc.Slot.is_raise
@@ -64,19 +88,22 @@ module Slot = struct
 @END_FROM_4_02_0@
 @BEGIN_BEFORE_4_02_0@
   let is_raise _ =
-    failwith "Unimplemented."
+    false
 
   let location _ =
-    failwith "Unimplemented."
+    None
 
   let format _ _ =
-    failwith "Unimplemented."
+    None
 @END_BEFORE_4_02_0@
 
   let is_inline _ =
-    failwith "Unimplemented."
-end
+    false
 @END_BEFORE_4_04_0@
+  let name _ =
+    None
+end
+@END_BEFORE_4_11_0@
 
 @BEGIN_FROM_4_02_0@
 type raw_backtrace_slot = Printexc.raw_backtrace_slot
@@ -99,7 +126,7 @@ let get_raw_backtrace_next_slot = Printexc.get_raw_backtrace_next_slot
 @END_FROM_4_04_0@
 @BEGIN_BEFORE_4_04_0@
 let get_raw_backtrace_next_slot _ =
-  failwith "Unimplemented."
+  not_implemented ()
 @END_BEFORE_4_04_0@
 
 @BEGIN_FROM_4_02_0@
@@ -119,25 +146,25 @@ let exn_slot_name = Printexc.exn_slot_name
 @END_FROM_4_02_0@
 @BEGIN_BEFORE_4_02_0@
 let set_uncaught_exception_handler _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let backtrace_slots _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let raw_backtrace_length _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let get_raw_backtrace_slot _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let convert_raw_backtrace_slot _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let exn_slot_id _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let exn_slot_name _ =
-  failwith "Unimplemented."
+  not_implemented ()
 @END_BEFORE_4_02_0@
 
 @BEGIN_FROM_4_10_0@
@@ -149,7 +176,7 @@ let get_callstack = Printexc.get_callstack
 @END_FROM_4_01_0@
 @BEGIN_BEFORE_4_01_0@
 let get_callstack _ =
-  failwith "Unimplemented."
+  not_implemented ()
 @END_BEFORE_4_01_0@
 @END_BEFORE_4_10_0@
 
@@ -163,11 +190,11 @@ let raw_backtrace_to_string = Printexc.raw_backtrace_to_string
 @BEGIN_BEFORE_4_01_0@
 let get_raw_backtrace _ = ()
 
-let print_raw_backtrace _ =
-  failwith "Unimplemented."
+let print_raw_backtrace _stderr _raw_backtrace =
+  ()
 
 let raw_backtrace_to_string _ =
-  failwith "Unimplemented."
+  not_implemented ()
 @END_BEFORE_4_01_0@
 
 @BEGIN_FROM_3_11_0@
@@ -183,20 +210,27 @@ let register_printer = Printexc.register_printer
 @END_FROM_3_11_0@
 @BEGIN_BEFORE_3_11_0@
 let print_backtrace _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let get_backtrace _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let record_backtrace _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let backtrace_status _ =
-  failwith "Unimplemented."
+  not_implemented ()
 
 let register_printer _ =
-  failwith "Unimplemented."
+  not_implemented ()
 @END_BEFORE_3_11_0@
 
 let print = Printexc.print
 let catch = Printexc.catch
+
+@BEGIN_BEFORE_4_11_0@
+let default_uncaught_exception_handler exn raw_backtrace =
+  Printf.eprintf "Fatal error: exception %s\n" (to_string exn);
+  print_raw_backtrace stderr raw_backtrace;
+  flush stderr
+@END_BEFORE_4_11_0@
