--- a/bundles/stdcompat/stdcompat-current/stdcompat__queue_s.mli.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__queue_s.mli.in
@@ -1,5 +1,11 @@
 module type S = sig
+@BEGIN_FROM_4_12_0@
+type !'a t = 'a Queue.t
+@END_FROM_4_12_0@
+@BEGIN_BEFORE_4_12_0@
+
 type 'a t = 'a Queue.t
+@END_BEFORE_4_12_0@
 (** Alias for {!Queue.t} *)
 
 exception Empty 
