--- a/bundles/stdcompat/stdcompat-current/stdcompat__sys.ml.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__sys.ml.in
@@ -1,5 +1,20 @@
 include Sys
 
+@BEGIN_BEFORE_4_12_0@
+let wrap_command cmd args =
+  match command (Stdcompat__filename.quote_command cmd args ~stderr:"/dev/null")
+  with
+  | 0 -> ()
+  | error_code ->
+    raise (Sys_error (Printf.sprintf "error code: %d" error_code))
+
+let rmdir path =
+  wrap_command "rmdir" [path]
+
+let mkdir path permissions =
+  wrap_command "mkdir" ["-m"; string_of_int permissions; path]
+@END_BEFORE_4_12_0@
+
 @BEGIN_BEFORE_4_10_0@
 module Immediate64 = struct
   module type Non_immediate = sig
