--- a/bundles/stdcompat/stdcompat-current/stdcompat__weak_s.mli.in
+++ b/bundles/stdcompat/stdcompat-current/stdcompat__weak_s.mli.in
@@ -1,46 +1,32 @@
 module type S = sig
+@BEGIN_FROM_4_12_0@
+type !'a t = 'a Weak.t
+@END_FROM_4_12_0@
+@BEGIN_BEFORE_4_12_0@
+
 type 'a t = 'a Weak.t
+@END_BEFORE_4_12_0@
 (** Alias for {!Weak.t} *)
 
 @BEGIN_FROM_4_05_0@
-module type S  =
-  sig
-    type data
-    type t
-    val create : int -> t
-    val clear : t -> unit
-    val merge : t -> data -> data
-    val add : t -> data -> unit
-    val remove : t -> data -> unit
-    val find : t -> data -> data
-    val find_opt : t -> data -> data option
-    val find_all : t -> data -> data list
-    val mem : t -> data -> bool
-    val iter : (data -> unit) -> t -> unit
-    val fold : (data -> 'a -> 'a) -> t -> 'a -> 'a
-    val count : t -> int
-    val stats : t -> (int * int * int * int * int * int)
-  end
+module type S =
+sig type data type t val create : int -> t val clear : t -> unit
+val merge : t -> data -> data val add : t -> data -> unit
+val remove : t -> data -> unit val find : t -> data -> data
+val find_opt : t -> data -> data option val find_all : t -> data -> data list
+val mem : t -> data -> bool val iter : (data -> unit) -> t -> unit
+val fold : (data -> 'a -> 'a) -> t -> 'a -> 'a val count : t -> int
+val stats : t -> (int * int * int * int * int * int) end
 @END_FROM_4_05_0@
 @BEGIN_BEFORE_4_05_0@
-module type S  =
-  sig
-    type data
-    type t
-    val create : int -> t
-    val clear : t -> unit
-    val merge : t -> data -> data
-    val add : t -> data -> unit
-    val remove : t -> data -> unit
-    val find : t -> data -> data
-    val find_opt : t -> data -> data option
-    val find_all : t -> data -> data list
-    val mem : t -> data -> bool
-    val iter : (data -> unit) -> t -> unit
-    val fold : (data -> 'a -> 'a) -> t -> 'a -> 'a
-    val count : t -> int
-    val stats : t -> (int * int * int * int * int * int)
-  end
+module type S =
+sig type data type t val create : int -> t val clear : t -> unit
+val merge : t -> data -> data val add : t -> data -> unit
+val remove : t -> data -> unit val find : t -> data -> data
+val find_opt : t -> data -> data option val find_all : t -> data -> data list
+val mem : t -> data -> bool val iter : (data -> unit) -> t -> unit
+val fold : (data -> 'a -> 'a) -> t -> 'a -> 'a val count : t -> int
+val stats : t -> (int * int * int * int * int * int) end
 @END_BEFORE_4_05_0@
 (** @since 4.05.0:
     module type S  =
@@ -69,23 +55,14 @@ module Make = Weak.Make
 @BEGIN_BEFORE_4_05_0@
 module Make :
 functor (H : Hashtbl.HashedType) ->
-  sig
-    type data = H.t
-    type t = Weak.Make(H).t
-    val create : int -> t
-    val clear : t -> unit
-    val merge : t -> data -> data
-    val add : t -> data -> unit
-    val remove : t -> data -> unit
-    val find : t -> data -> data
-    val find_opt : t -> data -> data option
-    val find_all : t -> data -> data list
-    val mem : t -> data -> bool
-    val iter : (data -> unit) -> t -> unit
-    val fold : (data -> 'a -> 'a) -> t -> 'a -> 'a
-    val count : t -> int
-    val stats : t -> (int * int * int * int * int * int)
-  end
+sig type data = H.t type t = Weak.Make(H).t val create : int -> t
+val clear : t -> unit val merge : t -> data -> data
+val add : t -> data -> unit val remove : t -> data -> unit
+val find : t -> data -> data val find_opt : t -> data -> data option
+val find_all : t -> data -> data list val mem : t -> data -> bool
+val iter : (data -> unit) -> t -> unit
+val fold : (data -> 'a -> 'a) -> t -> 'a -> 'a val count : t -> int
+val stats : t -> (int * int * int * int * int * int) end
 @END_BEFORE_4_05_0@
 (** @since 4.05.0: module Make = Weak.Make
  *)
